--- a/index.html
+++ b/index.html
@@ -1,46 +1,54 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assunto-Dorgas</title>
+    <title>Assunto- Drogas</title>
     <link rel="stylesheet" href="drogas.css">
 </head>
 <body>
     <header class="header">
-        <a href="menu.html" class="logo"><img id="logo" src="drogas.png" alt=""></a>
+        <a href="menu.html" class="logo"><img id="logo" src="logo.png" alt=""></a>
         <input class="side-menu" type="checkbox" id="side-menu"/>
         <label class="hamb" for="side-menu"><span class="hamb-line"></span></label>
         <nav class="nav">
             <ul class="menu">
-                <li><a href="#">Link1</a></li>
-                <li><a href="#">Link2</a></li>
-                <li><a href="#">Link3</a></li>
+                <li><a href="#">Link 01</a></li>
+                <li><a href="#">Link 02</a> </li>
+                <li><a href="#">Sobre</a></li>
             </ul>
         </nav>
     </header>
 
-   
    <section class="conteudo">
-    conteudo:
-
-    <div class="conteudo-home">
-        <div> 
-          musav
-         <div>
-         <img class="img-mobile" src="breakingbb.webp" alt="broke" srcset="">
-        </div>
-        <div>
-           drogas
-         </div>
-         <img class="img-mobile" src="chapola.jpeg" alt="não sei dizer" srcset="">
-     </div>
+       <div class="geral">
+           Descrição geral do conteúdo do site.
+       </div>
+       <div class="item1">
+            Conteúdo 01
+       </div>
+       <div class="item2">
+            Conteúdo 02
+       </div>
+       <div class="item3">
+            Conteúdo 03
+       </div>
+       <div class="item4">
+            Conteúdo 04
+       </div>
+       <div class="item5">
+        Conteúdo 05
+       </div>
+       <div class="item6">
+        Conteúdo 06
+       </div>
    </section>
+
    <footer class="rodape">
     @gastão_vidigal<br>
-    Guilherme 2°- F - manha <br>
-   En passe
+    Segundo F - manha <br>
+    @Jesus
    </footer>
 </body>
 </html>
